interpreter/src/Grammar/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from Grammar/Par.y
-----------------------------------------------------------------------------

state 17 contains 11 shift/reduce conflicts.
state 19 contains 11 shift/reduce conflicts.
state 22 contains 1 shift/reduce conflicts.
state 23 contains 1 shift/reduce conflicts.
state 25 contains 1 shift/reduce conflicts.
state 27 contains 5 shift/reduce conflicts.
state 40 contains 6 shift/reduce conflicts and 2 reduce/reduce conflicts.
state 52 contains 1 shift/reduce conflicts and 11 reduce/reduce conflicts.
state 53 contains 1 shift/reduce conflicts.
state 74 contains 17 shift/reduce conflicts.
state 78 contains 1 shift/reduce conflicts and 12 reduce/reduce conflicts.
state 79 contains 12 reduce/reduce conflicts.
state 80 contains 1 shift/reduce conflicts and 11 reduce/reduce conflicts.
state 81 contains 11 reduce/reduce conflicts.
state 82 contains 6 shift/reduce conflicts.
state 83 contains 6 shift/reduce conflicts.
state 84 contains 35 reduce/reduce conflicts.
state 85 contains 35 reduce/reduce conflicts.
state 90 contains 5 shift/reduce conflicts.
state 93 contains 5 shift/reduce conflicts and 5 reduce/reduce conflicts.
state 94 contains 6 shift/reduce conflicts and 2 reduce/reduce conflicts.
state 96 contains 9 reduce/reduce conflicts.
state 97 contains 1 shift/reduce conflicts.
state 104 contains 1 shift/reduce conflicts.
state 108 contains 5 shift/reduce conflicts.
state 110 contains 10 reduce/reduce conflicts.
state 111 contains 5 shift/reduce conflicts and 5 reduce/reduce conflicts.
state 113 contains 6 shift/reduce conflicts.
state 116 contains 5 shift/reduce conflicts.
state 123 contains 6 shift/reduce conflicts.
state 139 contains 10 reduce/reduce conflicts.
state 144 contains 1 shift/reduce conflicts.
state 145 contains 6 shift/reduce conflicts.
state 147 contains 6 shift/reduce conflicts.

rule 12 is unused
rule 19 is unused
rule 20 is unused
rule 21 is unused
rule 22 is unused
rule 32 is unused
rule 38 is unused
rule 56 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	Ident -> L_Ident                                   (1)
	Integer -> L_integ                                 (2)
	VarIdent -> L_VarIdent                             (3)
	TypeIdent -> L_TypeIdent                           (4)
	PolyIdentToken -> L_PolyIdentToken                 (5)
	Program -> ListTopDef                              (6)
	TopDef -> VarDef ';'                               (7)
	TopDef -> TypeDef ';'                              (8)
	TypeDef -> 'type' TypeIdent '=' TypeDefOption      (9)
	TypeDefOption -> TypeIdent ListTypeH               (10)
	TypeH -> '(' TypeDefOption ')'                     (11)
	TypeH -> Type                                      (12)
	VarDef -> VarIdent '=' Expr                        (13)
	ListTopDef -> TopDef                               (14)
	ListTopDef -> TopDef ListTopDef                    (15)
	Arg -> VarIdent                                    (16)
	ListArg ->                                         (17)
	ListArg -> Arg ListArg                             (18)
	ListTypeDefOption ->                               (19)
	ListTypeDefOption -> TypeDefOption                 (20)
	ListTypeDefOption -> TypeDefOption '|' ListTypeDefOption   (21)
	ListTypeH ->                                       (22)
	ListTypeH -> TypeH ListTypeH                       (23)
	Type -> 'int'                                      (24)
	Type -> 'bool'                                     (25)
	Type -> '\'' PolyIdentToken                        (26)
	Type -> ListTypeFnH                                (27)
	Type -> '[' Type ']'                               (28)
	Type -> TypeIdent ListPolyIdent                    (29)
	TypeFnH -> Type                                    (30)
	PolyIdent -> Type                                  (31)
	ListPolyIdent ->                                   (32)
	ListPolyIdent -> PolyIdent ListPolyIdent           (33)
	ListTypeFnH ->                                     (34)
	ListTypeFnH -> TypeFnH                             (35)
	ListTypeFnH -> TypeFnH '->' ListTypeFnH            (36)
	BExpr4 -> VarIdent ListExpr                        (37)
	BExpr4 -> '(' BExpr ')'                            (38)
	BExpr4 -> '(' BExpr ')'                            (39)
	BExpr3 -> '!' BExpr4                               (40)
	BExpr3 -> BExpr4                                   (41)
	BExpr2 -> Expr RelOp Expr                          (42)
	BExpr2 -> BExpr3                                   (43)
	BExpr1 -> BExpr2 '&&' BExpr1                       (44)
	BExpr1 -> BExpr2                                   (45)
	BExpr -> BExpr1 '\\/' BExpr                        (46)
	BExpr -> BExpr1                                    (47)
	Expr3 -> '|' ListArg '|' Expr                      (48)
	Expr3 -> Match                                     (49)
	Expr3 -> BExpr                                     (50)
	Expr3 -> 'let' VarDef 'in' Expr                    (51)
	Expr3 -> 'if' BExpr 'then' Expr 'else' Expr        (52)
	Expr3 -> Ident ListExpr                            (53)
	Expr3 -> Integer                                   (54)
	Expr3 -> '[' ListLArg ']'                          (55)
	Expr3 -> '(' Expr ')'                              (56)
	Expr3 -> '(' Expr ')'                              (57)
	Expr2 -> '-' Expr3                                 (58)
	Expr2 -> Expr3 ':' Expr3                           (59)
	Expr2 -> Expr3                                     (60)
	Expr1 -> Expr1 MulOp Expr2                         (61)
	Expr1 -> Expr2                                     (62)
	Expr -> Expr1 AddOp Expr                           (63)
	Expr -> Expr1                                      (64)
	LArg -> Expr                                       (65)
	ListLArg ->                                        (66)
	ListLArg -> LArg                                   (67)
	ListLArg -> LArg ',' ListLArg                      (68)
	ListExpr ->                                        (69)
	ListExpr -> Expr ListExpr                          (70)
	Match -> 'match' Expr 'with' ListMatchArm          (71)
	MatchArm -> MatchArmSpecifier '->' Expr            (72)
	MatchArmSpecifierHelper -> MatchArmSpecifier       (73)
	MatchArmSpecifierHelper -> VarIdent                (74)
	MatchArmSpecifierHelper -> '_'                     (75)
	MatchArmSpecifier -> '[]'                          (76)
	MatchArmSpecifier -> '[' MatchArmSpecifierHelper ']'   (77)
	MatchArmSpecifier -> MatchArmSpecifierHelper ':' MatchArmSpecifierHelper   (78)
	MatchArmSpecifier -> TypeIdent ListMatchArmTypeHelper   (79)
	MatchArmTypeHelper -> TypeIdent                    (80)
	MatchArmTypeHelper -> '_'                          (81)
	MatchArmTypeHelper -> '(' MatchArmSpecifier ')'    (82)
	ListMatchArm ->                                    (83)
	ListMatchArm -> MatchArm ListMatchArm              (84)
	ListMatchArmTypeHelper ->                          (85)
	ListMatchArmTypeHelper -> MatchArmTypeHelper ListMatchArmTypeHelper   (86)
	AddOp -> '+'                                       (87)
	AddOp -> '-'                                       (88)
	MulOp -> '*'                                       (89)
	MulOp -> '/'                                       (90)
	MulOp -> '%'                                       (91)
	RelOp -> '<'                                       (92)
	RelOp -> '<='                                      (93)
	RelOp -> '>'                                       (94)
	RelOp -> '>='                                      (95)
	RelOp -> '=='                                      (96)
	RelOp -> '!='                                      (97)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&&'           { PT _ (TS _ 4) }
	'\''           { PT _ (TS _ 5) }
	'('            { PT _ (TS _ 6) }
	')'            { PT _ (TS _ 7) }
	'*'            { PT _ (TS _ 8) }
	'+'            { PT _ (TS _ 9) }
	','            { PT _ (TS _ 10) }
	'-'            { PT _ (TS _ 11) }
	'->'           { PT _ (TS _ 12) }
	'/'            { PT _ (TS _ 13) }
	':'            { PT _ (TS _ 14) }
	';'            { PT _ (TS _ 15) }
	'<'            { PT _ (TS _ 16) }
	'<='           { PT _ (TS _ 17) }
	'='            { PT _ (TS _ 18) }
	'=='           { PT _ (TS _ 19) }
	'>'            { PT _ (TS _ 20) }
	'>='           { PT _ (TS _ 21) }
	'['            { PT _ (TS _ 22) }
	'[]'           { PT _ (TS _ 23) }
	'\\/'          { PT _ (TS _ 24) }
	']'            { PT _ (TS _ 25) }
	'_'            { PT _ (TS _ 26) }
	'bool'         { PT _ (TS _ 27) }
	'else'         { PT _ (TS _ 28) }
	'if'           { PT _ (TS _ 29) }
	'in'           { PT _ (TS _ 30) }
	'int'          { PT _ (TS _ 31) }
	'let'          { PT _ (TS _ 32) }
	'match'        { PT _ (TS _ 33) }
	'then'         { PT _ (TS _ 34) }
	'type'         { PT _ (TS _ 35) }
	'with'         { PT _ (TS _ 36) }
	'|'            { PT _ (TS _ 37) }
	L_Ident        { PT _ (TV $$) }
	L_integ        { PT _ (TI $$) }
	L_VarIdent     { PT _ (T_VarIdent $$) }
	L_TypeIdent    { PT _ (T_TypeIdent $$) }
	L_PolyIdentToken{ PT _ (T_PolyIdentToken $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	Ident           rule  1
	Integer         rule  2
	VarIdent        rule  3
	TypeIdent       rule  4
	PolyIdentToken  rule  5
	Program         rule  6
	TopDef          rules 7, 8
	TypeDef         rule  9
	TypeDefOption   rule  10
	TypeH           rules 11, 12
	VarDef          rule  13
	ListTopDef      rules 14, 15
	Arg             rule  16
	ListArg         rules 17, 18
	ListTypeDefOption rules 19, 20, 21
	ListTypeH       rules 22, 23
	Type            rules 24, 25, 26, 27, 28, 29
	TypeFnH         rule  30
	PolyIdent       rule  31
	ListPolyIdent   rules 32, 33
	ListTypeFnH     rules 34, 35, 36
	BExpr4          rules 37, 38, 39
	BExpr3          rules 40, 41
	BExpr2          rules 42, 43
	BExpr1          rules 44, 45
	BExpr           rules 46, 47
	Expr3           rules 48, 49, 50, 51, 52, 53, 54, 55, 56, 57
	Expr2           rules 58, 59, 60
	Expr1           rules 61, 62
	Expr            rules 63, 64
	LArg            rule  65
	ListLArg        rules 66, 67, 68
	ListExpr        rules 69, 70
	Match           rule  71
	MatchArm        rule  72
	MatchArmSpecifierHelper rules 73, 74, 75
	MatchArmSpecifier rules 76, 77, 78, 79
	MatchArmTypeHelper rules 80, 81, 82
	ListMatchArm    rules 83, 84
	ListMatchArmTypeHelper rules 85, 86
	AddOp           rules 87, 88
	MulOp           rules 89, 90, 91
	RelOp           rules 92, 93, 94, 95, 96, 97

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram -> . Program                        (rule 0)

	'type'         shift, and enter state 9
	L_VarIdent     shift, and enter state 10

	VarIdent       goto state 3
	Program        goto state 4
	TopDef         goto state 5
	TypeDef        goto state 6
	VarDef         goto state 7
	ListTopDef     goto state 8

State 1

	Ident -> . L_Ident                                  (rule 1)

	L_Ident        shift, and enter state 2


State 2

	Ident -> L_Ident .                                  (rule 1)

	'!'            reduce using rule 1
	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'/'            reduce using rule 1
	':'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'['            reduce using rule 1
	'[]'           reduce using rule 1
	'\\/'          reduce using rule 1
	']'            reduce using rule 1
	'_'            reduce using rule 1
	'else'         reduce using rule 1
	'if'           reduce using rule 1
	'in'           reduce using rule 1
	'let'          reduce using rule 1
	'match'        reduce using rule 1
	'then'         reduce using rule 1
	'with'         reduce using rule 1
	'|'            reduce using rule 1
	L_Ident        reduce using rule 1
	L_integ        reduce using rule 1
	L_VarIdent     reduce using rule 1
	L_TypeIdent    reduce using rule 1


State 3

	VarDef -> VarIdent . '=' Expr                       (rule 13)

	'='            shift, and enter state 16


State 4

	%start_pProgram -> Program .                        (rule 0)

	%eof           accept


State 5

	ListTopDef -> TopDef .                              (rule 14)
	ListTopDef -> TopDef . ListTopDef                   (rule 15)

	'type'         shift, and enter state 9
	L_VarIdent     shift, and enter state 10
	%eof           reduce using rule 14

	VarIdent       goto state 3
	TopDef         goto state 5
	TypeDef        goto state 6
	VarDef         goto state 7
	ListTopDef     goto state 15

State 6

	TopDef -> TypeDef . ';'                             (rule 8)

	';'            shift, and enter state 14


State 7

	TopDef -> VarDef . ';'                              (rule 7)

	';'            shift, and enter state 13


State 8

	Program -> ListTopDef .                             (rule 6)

	%eof           reduce using rule 6


State 9

	TypeDef -> 'type' . TypeIdent '=' TypeDefOption     (rule 9)

	L_TypeIdent    shift, and enter state 12

	TypeIdent      goto state 11

State 10

	VarIdent -> L_VarIdent .                            (rule 3)

	'!'            reduce using rule 3
	'!='           reduce using rule 3
	'%'            reduce using rule 3
	'&&'           reduce using rule 3
	'('            reduce using rule 3
	')'            reduce using rule 3
	'*'            reduce using rule 3
	'+'            reduce using rule 3
	','            reduce using rule 3
	'-'            reduce using rule 3
	'->'           reduce using rule 3
	'/'            reduce using rule 3
	':'            reduce using rule 3
	';'            reduce using rule 3
	'<'            reduce using rule 3
	'<='           reduce using rule 3
	'='            reduce using rule 3
	'=='           reduce using rule 3
	'>'            reduce using rule 3
	'>='           reduce using rule 3
	'['            reduce using rule 3
	'[]'           reduce using rule 3
	'\\/'          reduce using rule 3
	']'            reduce using rule 3
	'_'            reduce using rule 3
	'else'         reduce using rule 3
	'if'           reduce using rule 3
	'in'           reduce using rule 3
	'let'          reduce using rule 3
	'match'        reduce using rule 3
	'then'         reduce using rule 3
	'with'         reduce using rule 3
	'|'            reduce using rule 3
	L_Ident        reduce using rule 3
	L_integ        reduce using rule 3
	L_VarIdent     reduce using rule 3
	L_TypeIdent    reduce using rule 3


State 11

	TypeDef -> 'type' TypeIdent . '=' TypeDefOption     (rule 9)

	'='            shift, and enter state 39


State 12

	TypeIdent -> L_TypeIdent .                          (rule 4)

	'\''           reduce using rule 4
	'('            reduce using rule 4
	')'            reduce using rule 4
	'->'           reduce using rule 4
	':'            reduce using rule 4
	';'            reduce using rule 4
	'='            reduce using rule 4
	'['            reduce using rule 4
	']'            reduce using rule 4
	'_'            reduce using rule 4
	'bool'         reduce using rule 4
	'int'          reduce using rule 4
	L_TypeIdent    reduce using rule 4


State 13

	TopDef -> VarDef ';' .                              (rule 7)

	'type'         reduce using rule 7
	L_VarIdent     reduce using rule 7
	%eof           reduce using rule 7


State 14

	TopDef -> TypeDef ';' .                             (rule 8)

	'type'         reduce using rule 8
	L_VarIdent     reduce using rule 8
	%eof           reduce using rule 8


State 15

	ListTopDef -> TopDef ListTopDef .                   (rule 15)

	%eof           reduce using rule 15


State 16

	VarDef -> VarIdent '=' . Expr                       (rule 13)

	'!'            shift, and enter state 30
	'('            shift, and enter state 31
	'-'            shift, and enter state 32
	'['            shift, and enter state 33
	'if'           shift, and enter state 34
	'let'          shift, and enter state 35
	'match'        shift, and enter state 36
	'|'            shift, and enter state 37
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 38
	L_VarIdent     shift, and enter state 10

	Ident          goto state 17
	Integer        goto state 18
	VarIdent       goto state 19
	BExpr4         goto state 20
	BExpr3         goto state 21
	BExpr2         goto state 22
	BExpr1         goto state 23
	BExpr          goto state 24
	Expr3          goto state 25
	Expr2          goto state 26
	Expr1          goto state 27
	Expr           goto state 28
	Match          goto state 29

State 17

	Expr3 -> Ident . ListExpr                           (rule 53)

	'!'            shift, and enter state 30
			(reduce using rule 69)

	'!='           reduce using rule 69
	'%'            reduce using rule 69
	'&&'           reduce using rule 69
	'('            shift, and enter state 31
			(reduce using rule 69)

	')'            reduce using rule 69
	'*'            reduce using rule 69
	'+'            reduce using rule 69
	','            reduce using rule 69
	'-'            shift, and enter state 32
			(reduce using rule 69)

	'/'            reduce using rule 69
	':'            reduce using rule 69
	';'            reduce using rule 69
	'<'            reduce using rule 69
	'<='           reduce using rule 69
	'=='           reduce using rule 69
	'>'            reduce using rule 69
	'>='           reduce using rule 69
	'['            shift, and enter state 33
			(reduce using rule 69)

	'[]'           reduce using rule 69
	'\\/'          reduce using rule 69
	']'            reduce using rule 69
	'_'            reduce using rule 69
	'else'         reduce using rule 69
	'if'           shift, and enter state 34
			(reduce using rule 69)

	'in'           reduce using rule 69
	'let'          shift, and enter state 35
			(reduce using rule 69)

	'match'        shift, and enter state 36
			(reduce using rule 69)

	'then'         reduce using rule 69
	'with'         reduce using rule 69
	'|'            shift, and enter state 37
			(reduce using rule 69)

	L_Ident        shift, and enter state 2
			(reduce using rule 69)

	L_integ        shift, and enter state 38
			(reduce using rule 69)

	L_VarIdent     shift, and enter state 10
			(reduce using rule 69)

	L_TypeIdent    reduce using rule 69

	Ident          goto state 17
	Integer        goto state 18
	VarIdent       goto state 19
	BExpr4         goto state 20
	BExpr3         goto state 21
	BExpr2         goto state 22
	BExpr1         goto state 23
	BExpr          goto state 24
	Expr3          goto state 25
	Expr2          goto state 26
	Expr1          goto state 27
	Expr           goto state 74
	ListExpr       goto state 76
	Match          goto state 29

State 18

	Expr3 -> Integer .                                  (rule 54)

	'!'            reduce using rule 54
	'!='           reduce using rule 54
	'%'            reduce using rule 54
	'&&'           reduce using rule 54
	'('            reduce using rule 54
	')'            reduce using rule 54
	'*'            reduce using rule 54
	'+'            reduce using rule 54
	','            reduce using rule 54
	'-'            reduce using rule 54
	'/'            reduce using rule 54
	':'            reduce using rule 54
	';'            reduce using rule 54
	'<'            reduce using rule 54
	'<='           reduce using rule 54
	'=='           reduce using rule 54
	'>'            reduce using rule 54
	'>='           reduce using rule 54
	'['            reduce using rule 54
	'[]'           reduce using rule 54
	'\\/'          reduce using rule 54
	']'            reduce using rule 54
	'_'            reduce using rule 54
	'else'         reduce using rule 54
	'if'           reduce using rule 54
	'in'           reduce using rule 54
	'let'          reduce using rule 54
	'match'        reduce using rule 54
	'then'         reduce using rule 54
	'with'         reduce using rule 54
	'|'            reduce using rule 54
	L_Ident        reduce using rule 54
	L_integ        reduce using rule 54
	L_VarIdent     reduce using rule 54
	L_TypeIdent    reduce using rule 54


State 19

	BExpr4 -> VarIdent . ListExpr                       (rule 37)

	'!'            shift, and enter state 30
			(reduce using rule 69)

	'!='           reduce using rule 69
	'%'            reduce using rule 69
	'&&'           reduce using rule 69
	'('            shift, and enter state 31
			(reduce using rule 69)

	')'            reduce using rule 69
	'*'            reduce using rule 69
	'+'            reduce using rule 69
	','            reduce using rule 69
	'-'            shift, and enter state 32
			(reduce using rule 69)

	'/'            reduce using rule 69
	':'            reduce using rule 69
	';'            reduce using rule 69
	'<'            reduce using rule 69
	'<='           reduce using rule 69
	'=='           reduce using rule 69
	'>'            reduce using rule 69
	'>='           reduce using rule 69
	'['            shift, and enter state 33
			(reduce using rule 69)

	'[]'           reduce using rule 69
	'\\/'          reduce using rule 69
	']'            reduce using rule 69
	'_'            reduce using rule 69
	'else'         reduce using rule 69
	'if'           shift, and enter state 34
			(reduce using rule 69)

	'in'           reduce using rule 69
	'let'          shift, and enter state 35
			(reduce using rule 69)

	'match'        shift, and enter state 36
			(reduce using rule 69)

	'then'         reduce using rule 69
	'with'         reduce using rule 69
	'|'            shift, and enter state 37
			(reduce using rule 69)

	L_Ident        shift, and enter state 2
			(reduce using rule 69)

	L_integ        shift, and enter state 38
			(reduce using rule 69)

	L_VarIdent     shift, and enter state 10
			(reduce using rule 69)

	L_TypeIdent    reduce using rule 69

	Ident          goto state 17
	Integer        goto state 18
	VarIdent       goto state 19
	BExpr4         goto state 20
	BExpr3         goto state 21
	BExpr2         goto state 22
	BExpr1         goto state 23
	BExpr          goto state 24
	Expr3          goto state 25
	Expr2          goto state 26
	Expr1          goto state 27
	Expr           goto state 74
	ListExpr       goto state 75
	Match          goto state 29

State 20

	BExpr3 -> BExpr4 .                                  (rule 41)

	'!'            reduce using rule 41
	'!='           reduce using rule 41
	'%'            reduce using rule 41
	'&&'           reduce using rule 41
	'('            reduce using rule 41
	')'            reduce using rule 41
	'*'            reduce using rule 41
	'+'            reduce using rule 41
	','            reduce using rule 41
	'-'            reduce using rule 41
	'/'            reduce using rule 41
	':'            reduce using rule 41
	';'            reduce using rule 41
	'<'            reduce using rule 41
	'<='           reduce using rule 41
	'=='           reduce using rule 41
	'>'            reduce using rule 41
	'>='           reduce using rule 41
	'['            reduce using rule 41
	'[]'           reduce using rule 41
	'\\/'          reduce using rule 41
	']'            reduce using rule 41
	'_'            reduce using rule 41
	'else'         reduce using rule 41
	'if'           reduce using rule 41
	'in'           reduce using rule 41
	'let'          reduce using rule 41
	'match'        reduce using rule 41
	'then'         reduce using rule 41
	'with'         reduce using rule 41
	'|'            reduce using rule 41
	L_Ident        reduce using rule 41
	L_integ        reduce using rule 41
	L_VarIdent     reduce using rule 41
	L_TypeIdent    reduce using rule 41


State 21

	BExpr2 -> BExpr3 .                                  (rule 43)

	'!'            reduce using rule 43
	'!='           reduce using rule 43
	'%'            reduce using rule 43
	'&&'           reduce using rule 43
	'('            reduce using rule 43
	')'            reduce using rule 43
	'*'            reduce using rule 43
	'+'            reduce using rule 43
	','            reduce using rule 43
	'-'            reduce using rule 43
	'/'            reduce using rule 43
	':'            reduce using rule 43
	';'            reduce using rule 43
	'<'            reduce using rule 43
	'<='           reduce using rule 43
	'=='           reduce using rule 43
	'>'            reduce using rule 43
	'>='           reduce using rule 43
	'['            reduce using rule 43
	'[]'           reduce using rule 43
	'\\/'          reduce using rule 43
	']'            reduce using rule 43
	'_'            reduce using rule 43
	'else'         reduce using rule 43
	'if'           reduce using rule 43
	'in'           reduce using rule 43
	'let'          reduce using rule 43
	'match'        reduce using rule 43
	'then'         reduce using rule 43
	'with'         reduce using rule 43
	'|'            reduce using rule 43
	L_Ident        reduce using rule 43
	L_integ        reduce using rule 43
	L_VarIdent     reduce using rule 43
	L_TypeIdent    reduce using rule 43


State 22

	BExpr1 -> BExpr2 . '&&' BExpr1                      (rule 44)
	BExpr1 -> BExpr2 .                                  (rule 45)

	'!'            reduce using rule 45
	'!='           reduce using rule 45
	'%'            reduce using rule 45
	'&&'           shift, and enter state 73
			(reduce using rule 45)

	'('            reduce using rule 45
	')'            reduce using rule 45
	'*'            reduce using rule 45
	'+'            reduce using rule 45
	','            reduce using rule 45
	'-'            reduce using rule 45
	'/'            reduce using rule 45
	':'            reduce using rule 45
	';'            reduce using rule 45
	'<'            reduce using rule 45
	'<='           reduce using rule 45
	'=='           reduce using rule 45
	'>'            reduce using rule 45
	'>='           reduce using rule 45
	'['            reduce using rule 45
	'[]'           reduce using rule 45
	'\\/'          reduce using rule 45
	']'            reduce using rule 45
	'_'            reduce using rule 45
	'else'         reduce using rule 45
	'if'           reduce using rule 45
	'in'           reduce using rule 45
	'let'          reduce using rule 45
	'match'        reduce using rule 45
	'then'         reduce using rule 45
	'with'         reduce using rule 45
	'|'            reduce using rule 45
	L_Ident        reduce using rule 45
	L_integ        reduce using rule 45
	L_VarIdent     reduce using rule 45
	L_TypeIdent    reduce using rule 45


State 23

	BExpr -> BExpr1 . '\\/' BExpr                       (rule 46)
	BExpr -> BExpr1 .                                   (rule 47)

	'!'            reduce using rule 47
	'!='           reduce using rule 47
	'%'            reduce using rule 47
	'&&'           reduce using rule 47
	'('            reduce using rule 47
	')'            reduce using rule 47
	'*'            reduce using rule 47
	'+'            reduce using rule 47
	','            reduce using rule 47
	'-'            reduce using rule 47
	'/'            reduce using rule 47
	':'            reduce using rule 47
	';'            reduce using rule 47
	'<'            reduce using rule 47
	'<='           reduce using rule 47
	'=='           reduce using rule 47
	'>'            reduce using rule 47
	'>='           reduce using rule 47
	'['            reduce using rule 47
	'[]'           reduce using rule 47
	'\\/'          shift, and enter state 72
			(reduce using rule 47)

	']'            reduce using rule 47
	'_'            reduce using rule 47
	'else'         reduce using rule 47
	'if'           reduce using rule 47
	'in'           reduce using rule 47
	'let'          reduce using rule 47
	'match'        reduce using rule 47
	'then'         reduce using rule 47
	'with'         reduce using rule 47
	'|'            reduce using rule 47
	L_Ident        reduce using rule 47
	L_integ        reduce using rule 47
	L_VarIdent     reduce using rule 47
	L_TypeIdent    reduce using rule 47


State 24

	Expr3 -> BExpr .                                    (rule 50)

	'!'            reduce using rule 50
	'!='           reduce using rule 50
	'%'            reduce using rule 50
	'&&'           reduce using rule 50
	'('            reduce using rule 50
	')'            reduce using rule 50
	'*'            reduce using rule 50
	'+'            reduce using rule 50
	','            reduce using rule 50
	'-'            reduce using rule 50
	'/'            reduce using rule 50
	':'            reduce using rule 50
	';'            reduce using rule 50
	'<'            reduce using rule 50
	'<='           reduce using rule 50
	'=='           reduce using rule 50
	'>'            reduce using rule 50
	'>='           reduce using rule 50
	'['            reduce using rule 50
	'[]'           reduce using rule 50
	'\\/'          reduce using rule 50
	']'            reduce using rule 50
	'_'            reduce using rule 50
	'else'         reduce using rule 50
	'if'           reduce using rule 50
	'in'           reduce using rule 50
	'let'          reduce using rule 50
	'match'        reduce using rule 50
	'then'         reduce using rule 50
	'with'         reduce using rule 50
	'|'            reduce using rule 50
	L_Ident        reduce using rule 50
	L_integ        reduce using rule 50
	L_VarIdent     reduce using rule 50
	L_TypeIdent    reduce using rule 50


State 25

	Expr2 -> Expr3 . ':' Expr3                          (rule 59)
	Expr2 -> Expr3 .                                    (rule 60)

	'!'            reduce using rule 60
	'!='           reduce using rule 60
	'%'            reduce using rule 60
	'&&'           reduce using rule 60
	'('            reduce using rule 60
	')'            reduce using rule 60
	'*'            reduce using rule 60
	'+'            reduce using rule 60
	','            reduce using rule 60
	'-'            reduce using rule 60
	'/'            reduce using rule 60
	':'            shift, and enter state 71
			(reduce using rule 60)

	';'            reduce using rule 60
	'<'            reduce using rule 60
	'<='           reduce using rule 60
	'=='           reduce using rule 60
	'>'            reduce using rule 60
	'>='           reduce using rule 60
	'['            reduce using rule 60
	'[]'           reduce using rule 60
	'\\/'          reduce using rule 60
	']'            reduce using rule 60
	'_'            reduce using rule 60
	'else'         reduce using rule 60
	'if'           reduce using rule 60
	'in'           reduce using rule 60
	'let'          reduce using rule 60
	'match'        reduce using rule 60
	'then'         reduce using rule 60
	'with'         reduce using rule 60
	'|'            reduce using rule 60
	L_Ident        reduce using rule 60
	L_integ        reduce using rule 60
	L_VarIdent     reduce using rule 60
	L_TypeIdent    reduce using rule 60


State 26

	Expr1 -> Expr2 .                                    (rule 62)

	'!'            reduce using rule 62
	'!='           reduce using rule 62
	'%'            reduce using rule 62
	'&&'           reduce using rule 62
	'('            reduce using rule 62
	')'            reduce using rule 62
	'*'            reduce using rule 62
	'+'            reduce using rule 62
	','            reduce using rule 62
	'-'            reduce using rule 62
	'/'            reduce using rule 62
	':'            reduce using rule 62
	';'            reduce using rule 62
	'<'            reduce using rule 62
	'<='           reduce using rule 62
	'=='           reduce using rule 62
	'>'            reduce using rule 62
	'>='           reduce using rule 62
	'['            reduce using rule 62
	'[]'           reduce using rule 62
	'\\/'          reduce using rule 62
	']'            reduce using rule 62
	'_'            reduce using rule 62
	'else'         reduce using rule 62
	'if'           reduce using rule 62
	'in'           reduce using rule 62
	'let'          reduce using rule 62
	'match'        reduce using rule 62
	'then'         reduce using rule 62
	'with'         reduce using rule 62
	'|'            reduce using rule 62
	L_Ident        reduce using rule 62
	L_integ        reduce using rule 62
	L_VarIdent     reduce using rule 62
	L_TypeIdent    reduce using rule 62


State 27

	Expr1 -> Expr1 . MulOp Expr2                        (rule 61)
	Expr -> Expr1 . AddOp Expr                          (rule 63)
	Expr -> Expr1 .                                     (rule 64)

	'!'            reduce using rule 64
	'!='           reduce using rule 64
	'%'            shift, and enter state 66
			(reduce using rule 64)

	'&&'           reduce using rule 64
	'('            reduce using rule 64
	')'            reduce using rule 64
	'*'            shift, and enter state 67
			(reduce using rule 64)

	'+'            shift, and enter state 68
			(reduce using rule 64)

	','            reduce using rule 64
	'-'            shift, and enter state 69
			(reduce using rule 64)

	'/'            shift, and enter state 70
			(reduce using rule 64)

	':'            reduce using rule 64
	';'            reduce using rule 64
	'<'            reduce using rule 64
	'<='           reduce using rule 64
	'=='           reduce using rule 64
	'>'            reduce using rule 64
	'>='           reduce using rule 64
	'['            reduce using rule 64
	'[]'           reduce using rule 64
	'\\/'          reduce using rule 64
	']'            reduce using rule 64
	'_'            reduce using rule 64
	'else'         reduce using rule 64
	'if'           reduce using rule 64
	'in'           reduce using rule 64
	'let'          reduce using rule 64
	'match'        reduce using rule 64
	'then'         reduce using rule 64
	'with'         reduce using rule 64
	'|'            reduce using rule 64
	L_Ident        reduce using rule 64
	L_integ        reduce using rule 64
	L_VarIdent     reduce using rule 64
	L_TypeIdent    reduce using rule 64

	AddOp          goto state 64
	MulOp          goto state 65

State 28

	VarDef -> VarIdent '=' Expr .                       (rule 13)
	BExpr2 -> Expr . RelOp Expr                         (rule 42)

	'!='           shift, and enter state 58
	';'            reduce using rule 13
	'<'            shift, and enter state 59
	'<='           shift, and enter state 60
	'=='           shift, and enter state 61
	'>'            shift, and enter state 62
	'>='           shift, and enter state 63
	'in'           reduce using rule 13

	RelOp          goto state 57

State 29

	Expr3 -> Match .                                    (rule 49)
